<?xml version="1.0"?>
<package format="2">
  <name>mbzirc_ros</name>
  <version>0.0.0</version>
  <description>MBZIRC ROS resources</description>

  <maintainer email="ichen@openrobotics.org">Ian Chen</maintainer>

  <license>Apache License 2.0</license>

  <author>Ian Chen</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rosgraph_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
