<?xml version="1.0"?>
<package format="2">
  <name>mbzirc_seed</name>
  <version>0.0.0</version>
  <description>MBZIRC Solution Seed</description>

  <maintainer email="michael@openrobotics.org">Michael Carroll</maintainer>

  <license>Apache License 2.0</license>

  <author>Michael Carroll</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rosgraph_msgs</depend>
  <depend>ros_ign_interfaces</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
